Added login/signin feature

--- a/student-restaurants-app/main.html
+++ b/student-restaurants-app/main.html
@@ -110,7 +110,7 @@
 
           <div class="form-group">
             <label for="register-username">Username</label>
-            <input type="text" id="register-username" required maxlength="3" />
+            <input type="text" id="register-username" required minlength="3" />
             <small class="username-feedback"></small>
           </div>
 
