--- a/student-restaurants-app/main.html
+++ b/student-restaurants-app/main.html
@@ -155,8 +155,78 @@
       </div>
     </dialog>
 
+    <!-- profile modal content -->
     <dialog id="profile-dialog">
-      <!-- profile modal content -->
+      <div class="profile-container">
+        <h2>My Profile</h2>
+
+        <!--Profile view-->
+        <div id="profile-view" class="profile-section">
+          <div class="profile-info-group">
+            <label>Username:</label>
+            <p id="profile-username-display"></p>
+          </div>
+
+          <div class="profile-info-group">
+            <label>Email:</label>
+            <p id="profile-email-display"></p>
+          </div>
+
+          <div class="profile-actions">
+            <button class="btn-primary" id="edit-profile-btn">
+              Edit Profile
+            </button>
+            <button class="btn-secondary" id="close-profile-btn">Close</button>
+          </div>
+        </div>
+
+        <!--Profile edit-->
+        <div id="profile-edit" class="profile-section" style="display: none">
+          <form id="profile-edit-form">
+            <div class="form-group">
+              <label for="edit-username">Username</label>
+              <input type="text" id="edit-username" required minlength="3" />
+              <small class="edit-username-feedback"></small>
+            </div>
+
+            <div class="form-group">
+              <label for="edit-email">Email</label>
+              <input type="email" id="edit-email" required />
+            </div>
+
+            <div class="form-group">
+              <label for="edit-password"
+                >New Password (leave blank to keep current password)</label
+              >
+              <input type="password" id="edit-password" minlength="6" />
+            </div>
+
+            <div class="form-group">
+              <label for="edit-confirm-password">Confirm New Password</label>
+              <input type="password" id="edit-confirm-password" minlength="6" />
+            </div>
+
+            <div class="form-error" id="profile-error"></div>
+            <div class="form-success" id="profile-success"></div>
+
+            <div class="profile-actions">
+              <button type="submit" class="btn-primary">Save Changes</button>
+              <button type="button" class="btn-secondary" id="cancel-edit-btn">
+                Cancel
+              </button>
+            </div>
+          </form>
+        </div>
+
+        <!--Delete Account-->
+        <div class="danger-zone">
+          <h3>Danger Zone</h3>
+          <p>Once you delete your account, there is no going back.</p>
+          <button class="btn-danger" id="delete-account-btn">
+            Delete Account
+          </button>
+        </div>
+      </div>
     </dialog>
   </body>
 </html>
