add a toggole button to sort restaurant by distance amd alphabetical sorting

--- a/student-restaurants-app/main.html
+++ b/student-restaurants-app/main.html
@@ -55,9 +55,15 @@
         <select id="city-filter">
           <option value="all">All Cities</option>
         </select>
+
+        <button id="sort-btn" class="sort-btn" data-sort="alphabetical">
+          Sort: Alphabetical ⬇
+        </button>
       </div>
 
       <div id="map"></div>
+
+      <div id="restaurant-count" class="restaurant-count"></div>
 
       <table>
         <thead>
