Added restaurant count functionality to show how many resrats

--- a/student-restaurants-app/main.html
+++ b/student-restaurants-app/main.html
@@ -16,7 +16,7 @@
     ></script>
     <title>Finnish Student Restaurants</title>
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="main.js" defer></script>
+    <script type="module" src="main.js"></script>
   </head>
 
   <body>
@@ -57,7 +57,7 @@
         </select>
 
         <button id="sort-btn" class="sort-btn" data-sort="alphabetical">
-          Sort: Alphabetical ⬇
+          Sort: Alphabetical
         </button>
       </div>
 
